--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,12 @@
         "editor.rulers": [
             80
         ]
-    }
+    },
+    "tailwindCSS.includeLanguages": {
+        "plaintext": "liquid",
+    },
+    "tailwindCSS.emmetCompletions": true,
+    "css.validate": false,
+    "less.validate": false,
+    "scss.validate": false
 }
